iac/security.tf
# Creates a security group with ingress access to port 80, 22, and icmp.  Only port 80 is needed, but I used them to do some debugging and testing.
resource "aws_security_group" "web_server_sg" {
  name_prefix = "web_server_sg"

  vpc_id = aws_vpc.nlb_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
